lcs-squirrelmail (2.1~4) UNRELEASED; urgency=low

  [ Jean-Luc Chretien ]
    * Correct typo on name in mysql request  in lcs-squirrelmail-config
    * Add postrm for remove squirrelmail in lcs_db.params
      
 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 13 Jun 2008 14:03:43 +0200

lcs-squirrelmail (2.1~3) UNRELEASED; urgency=low

  [ Jean-Luc Chretien ]
  * Move handle_initial_config lcs-squirrelmail-config 100 to 95
    
 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 13 Jun 2008 10:10:19 +0200

lcs-squirrelmail (2.1~2) UNRELEASED; urgency=low

  [ Jean-Luc Chretien ]
  * Move handle_initial_config lcs-squirrelmail-config 70 to 100

 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 12 Jun 2008 19:23:44 +0200

lcs-squirrelmail (2.1~1) UNRELEASED; urgency=low

  [ Jean-Luc Chretien ]
  * Initial release of the new package.

 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Tue, 03 Jun 2008 19:12:59 +0200
